--- a/prototypes/src/gui/view/login.fxml
+++ b/prototypes/src/gui/view/login.fxml
@@ -13,25 +13,25 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e7eaed" height="503.0" layoutX="235.0" layoutY="-3.0" stroke="WHITE" strokeType="INSIDE" width="337.0" />
-      <ImageView fx:id="logoImage" fitHeight="77.0" fitWidth="234.0" layoutX="279.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true">
+      <Rectangle accessibleRole="PARENT" arcHeight="5.0" arcWidth="5.0" fill="#e7eaed" height="503.0" layoutX="235.0" layoutY="-3.0" stroke="WHITE" strokeType="INSIDE" width="337.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="-3.0" />
+      <ImageView fx:id="logoImage" accessibleRole="PARENT" fitHeight="77.0" fitWidth="234.0" layoutX="279.0" layoutY="55.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="287.0" AnchorPane.topAnchor="55.0">
          <image>
             <Image url="@../../../images/teampoint.png" />
          </image>
       </ImageView>
-      <Label layoutX="290.0" layoutY="160.0" text="SE CONNECTER">
+      <Label accessibleRole="PARENT" layoutX="290.0" layoutY="160.0" text="SE CONNECTER" AnchorPane.rightAnchor="378.8" AnchorPane.topAnchor="160.0">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="emailTextField" layoutX="291.0" layoutY="188.0" prefHeight="26.0" prefWidth="233.0" promptText="Adresse e-mail" />
-      <PasswordField fx:id="passwordField" layoutX="290.0" layoutY="223.0" prefHeight="26.0" prefWidth="234.0" promptText="Mot de passe" />
-      <Hyperlink fx:id="passwordForgetHyperLink" layoutX="396.0" layoutY="262.0" text="Mot de passe oublié ?" />
-      <Hyperlink fx:id="signUpHyperlink" layoutX="407.0" layoutY="400.0" onAction="#signUpHyperlinkOnAction" text="Créez vous un compte !" />
-      <Button fx:id="loginButton" layoutX="296.0" layoutY="298.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="27.0" prefWidth="200.0" text="SE CONNECTER">
+      <TextField fx:id="emailTextField" accessibleRole="PARENT" layoutX="291.0" layoutY="188.0" prefHeight="26.0" prefWidth="233.0" promptText="Adresse e-mail" AnchorPane.rightAnchor="275.4" AnchorPane.topAnchor="188.0" />
+      <PasswordField fx:id="passwordField" accessibleRole="PARENT" layoutX="290.0" layoutY="223.0" prefHeight="26.0" prefWidth="234.0" promptText="Mot de passe" AnchorPane.rightAnchor="275.6" AnchorPane.topAnchor="223.0" />
+      <Hyperlink fx:id="passwordForgetHyperLink" accessibleRole="PARENT" layoutX="396.0" layoutY="262.0" text="Mot de passe oublié ?" AnchorPane.rightAnchor="279.2" AnchorPane.topAnchor="262.0" />
+      <Hyperlink fx:id="signUpHyperlink" accessibleRole="PARENT" layoutX="407.0" layoutY="400.0" onAction="#signUpHyperlinkOnAction" text="Créez vous un compte !" AnchorPane.rightAnchor="260.2" AnchorPane.topAnchor="400.0" />
+      <Button fx:id="loginButton" accessibleRole="PARENT" layoutX="296.0" layoutY="298.0" mnemonicParsing="false" onAction="#loginButtonOnAction" prefHeight="27.0" prefWidth="200.0" text="SE CONNECTER" AnchorPane.rightAnchor="304.0" AnchorPane.topAnchor="298.0">
          <font>
             <Font name="System Bold" size="13.0" />
          </font></Button>
-      <Label layoutX="260.0" layoutY="403.0" text="Pas de compte TeamPoint ?" />
+      <Label accessibleRole="PARENT" layoutX="260.0" layoutY="403.0" text="Pas de compte TeamPoint ?" AnchorPane.rightAnchor="392.8" AnchorPane.topAnchor="403.0" />
    </children>
 </AnchorPane>
