--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -20,18 +20,18 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <ImageView fx:id="addBoardImage" fitHeight="20.0" fitWidth="27.0" layoutX="-2.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="addBoardImage" fitHeight="20.0" fitWidth="27.0" layoutX="1.0" layoutY="50.0" onMouseClicked="#addBoardClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../Mockups/plusButton.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="inviteMemberImage" fitHeight="20.0" fitWidth="17.0" layoutX="3.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="inviteMemberImage" fitHeight="20.0" fitWidth="17.0" layoutX="6.0" layoutY="81.0" onMouseClicked="#inviteMemberClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../Mockups/inviteUserButton.png" />
                </image>
             </ImageView>
-            <Label fx:id="addBoardLabel" layoutX="25.0" layoutY="49.0" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
-            <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
+            <Label fx:id="addBoardLabel" layoutX="25.0" layoutY="49.0" onMouseClicked="#addBoardClicked" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
+            <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" onMouseClicked="#inviteMemberClicked" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
             <Line fx:id="line2" endX="78.29998779296875" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" />
             </children></AnchorPane>
         <Label layoutX="97.0" layoutY="14.0" text="WORKSPACE">
