--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -33,6 +34,16 @@
             <Label fx:id="addBoardLabel" layoutX="25.0" layoutY="49.0" onMouseClicked="#addBoardClicked" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
             <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" onMouseClicked="#inviteMemberClicked" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
             <Line fx:id="line2" endX="78.29998779296875" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" />
+            <ScrollPane layoutX="-9.0" layoutY="115.0" prefHeight="465.0" prefWidth="175.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="451.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Label" />
+                        <Label layoutY="27.0" text="Label" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
             </children></AnchorPane>
         <Label layoutX="97.0" layoutY="14.0" text="WORKSPACE">
             <font>
