--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -35,14 +36,9 @@
             <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" onMouseClicked="#inviteMemberClicked" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
             <Line fx:id="line2" endX="78.29998779296875" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" />
             <ScrollPane layoutX="-9.0" layoutY="115.0" prefHeight="465.0" prefWidth="175.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="451.0" prefWidth="200.0">
-                     <children>
-                        <Label fx:id="board1" text="Label" />
-                        <Label layoutY="27.0" text="Label" />
-                     </children>
-                  </AnchorPane>
-              </content>
+               <content>
+                  <ListView fx:id="listBoard" prefHeight="452.0" prefWidth="200.0" />
+               </content>
             </ScrollPane>
             </children></AnchorPane>
         <Label layoutX="97.0" layoutY="14.0" text="WORKSPACE">
