--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -35,7 +35,7 @@
             <Label fx:id="addBoardLabel" layoutX="25.0" layoutY="49.0" onMouseClicked="#addBoardClicked" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
             <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" onMouseClicked="#inviteMemberClicked" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
             <Line fx:id="line2" endX="78.29998779296875" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" />
-            <ScrollPane layoutX="-9.0" layoutY="115.0" prefHeight="465.0" prefWidth="175.0">
+            <ScrollPane fx:id="sp" layoutX="-9.0" layoutY="115.0" prefHeight="465.0" prefWidth="175.0">
                <content>
                   <ListView fx:id="listBoard" prefHeight="452.0" prefWidth="200.0" />
                </content>
