--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
@@ -86,16 +85,17 @@
             </image>
         </ImageView>
         <MenuButton fx:id="workspaces" layoutX="432.0" layoutY="18.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="266.0" text="Selectionner un workspace" />
-        <ImageView fitHeight="28.0" fitWidth="31.0" layoutX="987.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../../../images/3points.png" />
-            </image>
-        </ImageView>
       <ImageView fx:id="logout" fitHeight="29.0" fitWidth="31.0" layoutX="22.0" layoutY="574.0" onMouseClicked="#logoutBtn" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../images/deconnexion.jpg" />
          </image>
       </ImageView>
+      <MenuButton layoutX="998.0" layoutY="19.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="42.0" text="+">
+        <items>
+          <MenuItem fx:id="createWorkspaceMenuItem" mnemonicParsing="false" text="Créer un workspace" />
+          <MenuItem fx:id="deleteWorkspaceMenuItem" mnemonicParsing="false" text="Supprimer un workspace" />
+        </items>
+      </MenuButton>
 
     </children>
 </AnchorPane>
