--- a/prototypes/src/gui/view/deleteWorkspace.fxml
+++ b/prototypes/src/gui/view/deleteWorkspace.fxml
@@ -2,20 +2,29 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="265.0" prefWidth="356.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.DeleteWorkspaceController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="423.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.DeleteWorkspaceController">
    <children>
-      <Label layoutX="42.0" layoutY="23.0" text="Créer un workspace">
+      <Label layoutX="124.0" layoutY="20.0" text="Supprimer un workspace">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="validateButton" layoutX="78.0" layoutY="193.0" mnemonicParsing="false" onAction="#validateOnAction" text="VALIDER" />
-      <Button fx:id="cancelButton" layoutX="186.0" layoutY="193.0" mnemonicParsing="false" onAction="#cancelOnAction" text="ANNULER" />
+      <Button fx:id="validateButton" layoutX="117.0" layoutY="376.0" mnemonicParsing="false" onAction="#validateOnAction" text="SUPPRIMER" />
+      <Button fx:id="cancelButton" layoutX="247.0" layoutY="376.0" mnemonicParsing="false" onAction="#cancelOnAction" text="ANNULER" />
       <Label fx:id="messageLabel" layoutX="64.0" layoutY="153.0" prefHeight="18.0" prefWidth="222.0" textFill="#e20a0a" />
-      <TextField fx:id="workspaceName" layoutX="64.0" layoutY="94.0" prefHeight="26.0" prefWidth="211.0" promptText="Nom du workspace" />
+      <ScrollPane layoutX="64.0" layoutY="62.0" prefHeight="290.0" prefWidth="303.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ListView fx:id="workspaceListView" prefHeight="290.0" prefWidth="303.0" />
+               </children>
+            </AnchorPane>
+        </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
