--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -23,22 +23,16 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <ImageView fx:id="addBoardImage" fitHeight="20.0" fitWidth="27.0" layoutX="1.0" layoutY="50.0" onMouseClicked="#addBoardClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="addBoardImage" fitHeight="20.0" fitWidth="27.0" layoutX="1.0" layoutY="32.0" onMouseClicked="#addBoardClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../Mockups/plusButton.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="inviteMemberImage" fitHeight="20.0" fitWidth="17.0" layoutX="6.0" layoutY="81.0" onMouseClicked="#inviteMemberClicked" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../../Mockups/inviteUserButton.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="addBoardLabel" layoutX="25.0" layoutY="49.0" onMouseClicked="#addBoardClicked" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
-            <Label fx:id="inviteMemberLabel" layoutX="25.0" layoutY="80.0" onMouseClicked="#inviteMemberClicked" prefHeight="18.0" prefWidth="132.0" text="Inviter un membre" />
-            <Line fx:id="line2" endX="78.29998779296875" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" />
-            <ScrollPane fx:id="sp" layoutX="-9.0" layoutY="115.0" prefHeight="465.0" prefWidth="175.0">
+            <Label fx:id="addBoardLabel" layoutX="28.0" layoutY="31.0" onMouseClicked="#addBoardClicked" prefHeight="18.0" prefWidth="132.0" text="Ajouter un board" />
+            <Line fx:id="line2" endX="79.29290771484375" endY="-47.707115173339844" layoutX="91.0" layoutY="114.0" startX="-103.50001525878906" startY="-47.707115173339844" />
+            <ScrollPane fx:id="sp" layoutX="-9.0" layoutY="72.0" prefHeight="509.0" prefWidth="175.0">
                <content>
-                  <ListView fx:id="listBoard" prefHeight="452.0" prefWidth="200.0" />
+                  <ListView fx:id="listBoard" prefHeight="538.0" prefWidth="282.0" />
                </content>
             </ScrollPane>
             <Line fx:id="line3" endX="693.7999267578125" endY="-7.62939453125E-6" layoutX="271.0" layoutY="67.0" startX="-100.0" />
@@ -47,17 +41,18 @@
                   <Font size="15.0" />
                </font>
             </Label>
-            <MenuButton fx:id="ChangeViewMenuButton" layoutX="416.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="132.0" text="MenuButton">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
             <ScrollPane fx:id="sp2" layoutX="168.0" layoutY="68.0" prefHeight="515.0" prefWidth="795.0">
                <content>
-                  <ListView fx:id="itemCollectionListView" />
-               </content>
-            </ScrollPane>
+                  <ScrollPane prefHeight="517.0" prefWidth="816.0">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="610.0" prefWidth="918.0">
+                           <children>
+                              <MenuButton fx:id="itemCollectionMenuButton" layoutX="14.0" layoutY="86.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="197.0" text="Sélectionner un item collection" />
+                           </children>
+                        </AnchorPane>
+                    </content>
+                  </ScrollPane>
+               </content></ScrollPane>
             </children></AnchorPane>
         <Label layoutX="97.0" layoutY="14.0" text="WORKSPACE">
             <font>
@@ -67,16 +62,6 @@
         <ImageView fitHeight="69.0" fitWidth="51.0" layoutX="9.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../../../images/teampointicon.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="37.0" fitWidth="43.0" layoutX="14.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../../../images/bellButton.png" />
-            </image>
-        </ImageView>
-        <ImageView fx:id="4boxImage" fitHeight="26.0" fitWidth="31.0" layoutX="21.0" layoutY="84.0" onMouseClicked="#boxImageClicked" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../../../images/4Boxes.png" />
             </image>
         </ImageView>
         <ImageView fx:id="profileImage" fitHeight="46.0" fitWidth="50.0" layoutX="12.0" layoutY="521.0" onMouseClicked="#profileImageClicked" pickOnBounds="true" preserveRatio="true">
