--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -49,7 +49,10 @@
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="610.0" prefWidth="918.0">
                            <children>
                               <MenuButton fx:id="itemCollectionMenuButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="197.0" text="Sélectionner un item collection" />
-                              <TableView fx:id="boardTableView" layoutX="13.0" layoutY="68.0" prefHeight="410.0" prefWidth="726.0" />
+                              <TableView fx:id="boardTableView" layoutX="13.0" layoutY="68.0" prefHeight="410.0" prefWidth="726.0">
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy></TableView>
                            </children>
                         </AnchorPane>
                     </content>
