--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -49,16 +49,28 @@
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="610.0" prefWidth="918.0">
                            <children>
                               <MenuButton fx:id="itemCollectionMenuButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="197.0" text="Sélectionner un item collection" />
-                              <TableView fx:id="boardTableView" layoutX="13.0" layoutY="68.0" prefHeight="410.0" prefWidth="726.0">
+                              <TableView fx:id="boardTableView" layoutX="13.0" layoutY="68.0" prefHeight="377.0" prefWidth="726.0">
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                  </columnResizePolicy></TableView>
-                              <ImageView fx:id="addItemCollectionImage" fitHeight="20.0"  fitWidth="27.0" layoutX="230.0" layoutY="16.0" onMouseClicked="#addItemCollectionClicked" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="addItemCollectionImage" fitHeight="20.0" fitWidth="27.0" layoutX="230.0" layoutY="16.0" onMouseClicked="#addItemCollectionClicked" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../../Mockups/plusButton.png" />
                                  </image>
                               </ImageView>
                               <Label fx:id="addItemCollectionLabel" layoutX="257.0" layoutY="15.0" onMouseClicked="#addItemCollectionClicked" prefHeight="18.0" prefWidth="141.0" text="Ajouter un item collection" />
+                              <ImageView fx:id="addColumnImage" fitHeight="20.0" fitWidth="27.0" layoutX="626.0" layoutY="47.0" onMouseClicked="#addColumnClicked" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../../Mockups/plusButton.png" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="addColumnLabel" layoutX="653.0" layoutY="46.0" onMouseClicked="#addColumnClicked" prefHeight="18.0" prefWidth="111.0" text="Ajouter une colonne" />
+                              <ImageView fx:id="addItemImage" fitHeight="20.0" fitWidth="27.0" layoutX="15.0" layoutY="459.0" onMouseClicked="#addItemCollectionClicked" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../../Mockups/plusButton.png" />
+                                 </image>
+                              </ImageView>
+                              <Label fx:id="addItemLabel" layoutX="42.0" layoutY="458.0" onMouseClicked="#addItemCollectionClicked" prefHeight="18.0" prefWidth="94.0" text="Ajouter une item" />
                            </children>
                         </AnchorPane>
                     </content>
