--- a/prototypes/src/gui/view/workspace.fxml
+++ b/prototypes/src/gui/view/workspace.fxml
@@ -52,7 +52,8 @@
                               <TableView fx:id="boardTableView" layoutX="13.0" layoutY="68.0" prefHeight="377.0" prefWidth="726.0">
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy></TableView>
+                                 </columnResizePolicy>
+                              </TableView>
                               <ImageView fx:id="addItemCollectionImage" fitHeight="20.0" fitWidth="27.0" layoutX="230.0" layoutY="16.0" onMouseClicked="#addItemCollectionClicked" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../../../../Mockups/plusButton.png" />
